libece 0.2.1-wip (DD/MM/YYYY):
	- yocto wip: added LICENSE file
	- ece_revision() returns GIT commit ID
	- contrib: produce.sh extensions
	- SB API: getInfo returns Operation CA Cert; s/csr_tmpl/csr_template
	- added .gitignore

libece 0.2a (02/09/2013):
	- QtJson (GPL) -> QJson (LGPL)
	- contrib: produce.sh - basic keygen + csr tool
	- test/sb += double-CA/SNI test case
	- SB Json error logging
	- SB API: POST plain string parameters instead of Json

libece 0.1a (16/08/2013):
	- first alpha release for testing/integration